<resources>
    <string name="underway_loading">正在加载....</string>

    <string name="search_address">搜索充电桩</string>
    <string name="login_or_register">登录或注册</string>
    <string name="app_id">5874acb5</string>
    <string name="app_name">萨默云充</string>
    <string name="phone_number">手机号码</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="or">or</string>
    <string name="register">注册</string>
    <string name="phone_num">手机号码</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="password_required">6-16位密码</string>
    <string name="please_input_auth_code">请输入验证码</string>
    <string name="auth_code">验证码</string>
    <string name="register_now">立即注册</string>
    <string name="find_station">找桩</string>
    <string name="station">站点</string>
    <string name="homepage">主页</string>
    <string name="order">订单</string>
    <string name="mine">我的</string>
    <string name="my_account">我的账户</string>
    <string name="my_charging">我的充电</string>
    <string name="my_rent_car">我的租车</string>
    <string name="my_subscribe">我的预约</string>
    <string name="my_build_station">我的建桩</string>
    <string name="helptext">帮助说明</string>
    <string name="setting">设置</string>
    <string name="unit_price">单价</string>
    <string name="electric_quantity">电量</string>
    <string name="can_use_distance">可续航里数</string>
    <string name="order_details">订单详情</string>
    <string name="current_cost">实时费用</string>
    <string name="open_door">开门</string>
    <string name="whistle_light">鸣笛闪灯</string>
    <string name="all_clear">解除警报</string>
    <string name="open_trunk">开后备箱</string>
    <string name="time">时间</string>
    <string name="degree">度数</string>
    <string name="electricity">电流</string>
    <string name="voltage">电压</string>
    <string name="start_charging">开始充电</string>
    <string name="get_auth_code">获取动态验证码</string>
    <string name="help">帮助</string>
    <string name="near_charging_pile">附近充电桩</string>
    <string name="near_rent_car">附近租车</string>
    <string name="had_subscribe">已预约</string>
    <string name="car">车辆</string>
    <string name="car_stall">车位</string>
    <string name="subscribe">预约</string>
    <string name="usable_car">可用车辆</string>
    <string name="charging_pile">充电桩</string>
    <string name="off_line">离线</string>
    <string name="details">详情</string>
    <string name="all_dot">全部点</string>
    <string name="online">在线</string>
    <string name="not_online">不在线</string>
    <string name="freeing">空闲中</string>
    <string name="navigation">导航</string>
    <string name="history_order">历史订单</string>
    <string name="bill">账单</string>
    <string name="info_is_verify">个人信息已验证</string>
    <string name="balance_details">余额明细</string>
    <string name="recharge">充值</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="Alipay_account">支付宝账号</string>
    <string name="money">金额</string>
    <string name="out_log_in">退出登录</string>
    <string name="no_login">未登录</string>
    <string name="scan_code_charging">扫描充电桩上的二维码即可启动充电</string>
    <string name="scan_code">扫码</string>
    <string name="recharge_amount">充值金额</string>
    <string name="payment_method">支付方式</string>
    <string name="input_recharge_amount">输入充值金额：</string>
    <string name="account_reload">账户充值</string>
    <string name="complete_the_charge">充电完成</string>
    <string name="payment_amount">实付金额 （元）</string>
    <string name="charge_amount">充电金额</string>
    <string name="charging_pile_number">充电桩编号</string>
    <string name="charging_time">充电时长</string>
    <string name="car_model">车型</string>
    <string name="charging_degree">充电度数</string>
    <string name="end_reason">结束原因</string>
    <string name="charging">充电状态</string>
    <string name="open_flash_light">开灯</string>
    <string name="close_flash_light">关灯</string>
    <string name="select_charging_model">选择充电模式</string>
    <string name="charging_model_one">模式一：一键充满</string>
    <string name="charging_model_two">模式二：按金额充</string>
    <string name="charging_model_three">模式三：按电量充</string>
    <string name="end_charging">结束充电</string>
    <string name="reservation">预约</string>
    <string name="prior_reservation">请提前规划好行程，提前将充电抢连接您的爱车,如您未在预约时间，系统将在10分钟后自动为您取消预约</string>
    <string name="instructions">操作说明</string>
    <string name="jump">跳过</string>
    <string name="serve">服务</string>
    <string name="save">保存</string>
    <string name="account">账&#160;&#160;&#160;&#160;号</string>
    <string name="account_login">账号登录</string>
    <string name="verification_code">验证码</string>
    <string name="account_setting">账户设置</string>
    <string name="update_nick_name">修改昵称</string>
    <string name="write_name">填写姓名</string>
    <string name="personal_info">个人信息</string>
    <string name="gender_write">性别填写</string>
    <string name="personal_balance">个人余额</string>
    <string name="transaction_record">交易记录</string>
    <string name="chargint_record">充电记录</string>
    <string name="account_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="persone_center">个人中心</string>
    <string name="about_samo">关于萨默</string>
    <string name="verified">实名认证</string>
    <string name="message">消息</string>
    <string name="partner_protocol">萨默合伙人协议</string>
    <string name="audit_process">审核流程</string>
</resources>
