<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white_ff"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:minWidth="70dp"
            android:text="@string/phone_num"
            android:textColor="@color/black_32"
            android:textSize="16sp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="18dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/please_input_phone_number"
            android:inputType="phone"
            android:maxLines="11"
            android:textColor="@color/black_64"
            android:textColorHint="@color/gray_83"
            android:textSize="14sp"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <include layout="@layout/line_f4"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white_ff"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:minWidth="70dp"
            android:text="@string/auth_code"
            android:textColor="@color/black_32"
            android:textSize="16sp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_auth_code"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="18dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/please_input_auth_code"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/black_64"
            android:textColorHint="@color/gray_83"
            android:textSize="14sp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_get_auth_code"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/bg_green00_frame"
            android:gravity="center"
            android:paddingLeft="9dp"
            android:paddingRight="9dp"
            android:text="@string/get_auth_code"
            android:textColor="@color/gray_83"
            android:textSize="14sp"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <include layout="@layout/line_f4"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white_ff"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:minWidth="70dp"
            android:text="@string/password"
            android:textColor="@color/black_32"
            android:textSize="16sp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="18dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/password_required"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black_64"
            android:textColorHint="@color/gray_83"
            android:textSize="14sp"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_f5">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/title_radius"
            android:gravity="center"
            android:text="@string/register_now"
            android:textColor="@color/white_ff"
            android:textSize="16sp"/>
    </RelativeLayout>

</android.support.v7.widget.LinearLayoutCompat>
