<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="9dp"
            android:text="@string/button_cancel"
            android:textColor="@color/white_ff"
            android:textSize="14sp"
            android:visibility="gone" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/account_login"
            android:textColor="@color/white_ff"
            android:textSize="18sp" />

    </FrameLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/fl_title"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:text="@string/account"
        android:textColor="@color/black_32"
        android:textSize="16sp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/fl_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="12dp"
        android:layout_toRightOf="@id/tv_account"
        android:background="@null"
        android:hint="请输入手机号码"
        android:inputType="number"
        android:maxLength="11"
        android:textSize="14sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/et_phone"
        android:background="@color/gray_e6" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@id/view"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:text="@string/verification_code"
        android:textColor="@color/black_32"
        android:textSize="16sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_get_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/view"
        android:layout_marginRight="12dp"
        android:layout_marginTop="7.5dp"
        android:background="@drawable/bg_green00_frame"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="获取验证码"
        android:textColor="@color/colorPrimary" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_verification_code"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/et_phone"
        android:layout_marginLeft="30dp"
        android:layout_toLeftOf="@id/btn_get_verification_code"
        android:layout_toRightOf="@id/tv_account"
        android:background="@null"
        android:hint="请输入验证码"
        android:inputType="number"
        android:maxLength="6"
        android:textSize="14sp" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/et_verification_code"
        android:background="@color/gray_e6" />

    <!--<CheckBox-->
    <!--android:id="@+id/cb_agreement"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="30dp"-->
    <!--android:layout_below="@id/view2"-->
    <!--android:layout_marginLeft="8dp"-->
    <!--android:checked="true" />-->

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_agreement"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/view2"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center_vertical"
        android:textColor="@color/black_32"
        android:textSize="14sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/et_verification_code"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/title_radius"
        android:text="@string/login"
        android:textColor="@color/white_ff"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="————————— 使用第三方登录 —————————"
        android:textColor="@color/black_83" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="9dp"
            android:src="@drawable/qq" />

        <ImageView
            android:id="@+id/iv_wechat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="9dp"
            android:src="@drawable/weixin" />

        <ImageView
            android:id="@+id/iv_zfb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="9dp"
            android:src="@drawable/zfb" />
    </LinearLayout>
</RelativeLayout>
